# ProductSearcher

./: .editorconfig  .gitignore  README.md  pyproject.toml  scrapy.cfg  user_agent.list
GitHooksExample/: pre-commit
ProductSearcher/: items.py  middlewares.py  pipelines.py  settings.py
ProductSearcher/runners/: searchrunner.py
ProductSearcher/spiders/: search.py
ProductSearcher/web/: config.py  searchviewer.py
ProductSearcher/web/static/: main.js  style.css
ProductSearcher/web/templates/: viewer.html
