[tool.poetry]
name = "productsearcher"
version = "0.1.0"
description = "Search products from all around the world"
authors = ["snowcookie <snow.shanalike@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scrapy = "^1.8.0"
flask = "^1.1.1"
pytrends = "^4.7.2"

[tool.poetry.dev-dependencies]
yapf = "^0.29.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
